Fix overflow issue

--- a/src/scss/apps/matcha/_matcha.scss
+++ b/src/scss/apps/matcha/_matcha.scss
@@ -13,6 +13,12 @@ $matcha-dark-green: #28534a;
             format('opentype');
 }
 
+#matcha-main {
+    main {
+        overflow: hidden;
+    }
+}
+
 .matcha-btn {
     padding: 0.3em 1em;
     font-size: 2rem;
