--- a/src/scss/apps/matcha/components/_matcha-header.scss
+++ b/src/scss/apps/matcha/components/_matcha-header.scss
@@ -4,11 +4,11 @@
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 1;
     transition: all 0.2s;
     padding-top: 2rem;
     padding-bottom: 2rem;
     z-index: 2;
+    overflow: hidden;
 
     &__nav-item {
         font-size: 1.5rem;
